# itl

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
apps/: launcher.sh  train.py
apps/finetuning/: README.md
apps/finetuning/Analysis/: aggregate_json_results_into_csv.py
apps/finetuning/Data/: HF_dataset_generation.py
apps/finetuning/Evaluation/: eval_hellaswag.py  eval_kl.py  eval_recall.py
apps/finetuning/Training/: ToolDataCollator.py  finetune_parallelized.py
apps/large_scale/: README.md  __init__.py
apps/large_scale/Analysis/: __init__.py  aggregate_json_results_into_csv.py  plot_large_scale_results_from_csv.py
apps/large_scale/Data/: HF_dataset_generation.py
apps/large_scale/Data/HF_dataset_200_000/: dataset_info.json
apps/large_scale/Evaluation/: __init__.py  eval_hellaswag.py  eval_kl.py  eval_recall.py
apps/large_scale/Training/: ToolDataCollator.py  __init__.py  finetune_parallelized.py
apps/large_scale/data/: HF_dataset_generation.py
apps/large_scale/evaluation/: eval_hellaswag.py  eval_kl.py  eval_recall.py
apps/large_scale/extension/: README.md  launch.sh  rebuttal.sh  tool_use.py  tool_use_simple.py
apps/large_scale/extension/evaluation/: eval_hellaswag.py  eval_recall.py
apps/large_scale/extension/plots/: get_results.py
apps/large_scale/extension/training/: finetune.py
apps/large_scale/plots/: analysis.py  get_results.py
apps/large_scale/rebuttal/: rebuttal.sh  tool_data_collator.py
apps/large_scale/rebuttal/data/: generate_trivia_qa.py
apps/large_scale/scripts/: llama_experiments.sh  smollm_experiments.sh
apps/large_scale/training/: finetune_parallelized.py  tool_data_collator.py
apps/largescale/: README.md
apps/largescale/Analysis/: large_scale_results.csv  plot_large_scale_results_from_csv.py
apps/largescale/Analysis/Plots/: avg_training_steps.csv
apps/largescale/Data/HF_dataset_200_000/: state.json
apps/largescale/Evaluation/: eval_hellaswag.py  eval_recall.py
apps/largescale/Paper_experiments_jobfiles/: Llama_experiments.sh
apps/llm/: README.md
apps/llm/scripts/: download.sh  download_dataset.py
apps/memory/: README.md  TODO.md  __init__.py  args.py  args_ood.py  config_with_tool.yaml  config_without_tool.yaml  eval.py  evaluation.py  finetune.py  launch_grid.py  local_grid.py  plot.py  prompt_loader.py  train.py  train_ood.py
apps/memory/bash/: generate_data.sh
apps/memory/compressibility/: args.py  train.py
apps/memory/config/: debug.yaml  eval.yaml  fine_grid.yaml  finetune.yaml  generalization.yaml  grid.yaml  launch_grid.yaml  local_grid.yaml  ood_eval_1.yaml  ood_eval_10.yaml  ood_eval_11.yaml  ood_eval_12.yaml  ood_eval_13.yaml  ood_eval_14.yaml  ood_eval_15.yaml  ood_eval_16.yaml  ood_eval_17.yaml  ood_eval_18.yaml  ood_eval_19.yaml  ood_eval_2.yaml  ood_eval_20.yaml  ood_eval_21.yaml  ood_eval_22.yaml  ood_eval_23.yaml  ood_eval_24.yaml  ood_eval_25.yaml  ood_eval_26.yaml  ood_eval_27.yaml  ood_eval_28.yaml  ood_eval_29.yaml  ood_eval_3.yaml  ood_eval_30.yaml  ood_eval_31.yaml  ood_eval_4.yaml  ood_eval_5.yaml  ood_eval_6.yaml  ood_eval_7.yaml  ood_eval_8.yaml  ood_eval_9.yaml  ood_eval_grid_1.yaml  (+4 more)
apps/memory/config/compressibility/: run_0.yaml  run_1.yaml  run_10.yaml  run_11.yaml  run_12.yaml  run_13.yaml  run_14.yaml  run_15.yaml  run_16.yaml  run_17.yaml  run_18.yaml  run_19.yaml  run_2.yaml  run_20.yaml  run_21.yaml  run_22.yaml  run_23.yaml  run_24.yaml  run_25.yaml  run_26.yaml  run_27.yaml  run_28.yaml  run_29.yaml  run_3.yaml  run_30.yaml  run_31.yaml  run_32.yaml  run_33.yaml  run_34.yaml  run_35.yaml  run_36.yaml  run_37.yaml  run_38.yaml  run_39.yaml  run_4.yaml  run_40.yaml  run_41.yaml  run_42.yaml  run_43.yaml  run_44.yaml  (+15 more)
apps/memory/dataset/: database.py  generate.py  sql_db.py
apps/memory/dataset/atoms/: cities.txt  countries.txt  first_names.txt  first_names_extended.txt  first_names_ood.txt  last_names.txt
apps/memory/dataset/dependent_data/: database.py  generate.py
apps/memory/dataset/ood_data/: create_first_names_ood.py  create_ood.py  database.py  generate.py
apps/memory/dataset/templates/: bio1.j2  bio2.j2  bio3.j2  bio4.j2  qa1.j2  qa2.j2  (+6 more)
apps/memory/finetuning/: __init__.py  eval.py  finetune.py  utils.py
apps/memory/generalization/: args.py  train.py
apps/memory/plots/: analysis.py  controlled_experiments.py  large_scale_analysis.py  training_run.py
apps/memory/pretrained_model/: finetune.py  utils.py
apps/memory/scripts/: compressibility.sh  generalization.sh  generate_data.sh  generate_data_ood.sh  generate_dependent_data.sh  generate_ood_data.sh  ood_eval.sh  params_bounds.sh
debug/: generation.py  tensor_parallel.py
results/: README.md  grid1.csv  grid2.csv  grid3.csv  grid4.csv  grid_dependent_1000.csv  grid_dependent_8192.csv  grid_ood.csv  grid_ood_data.csv  large_scale_results.csv
src/apps/memory/: config.yaml  config_with_tool.yaml  config_without_tool.yaml  llama2_model.py  parallel_debug.py  train.py
src/memory/: __init__.py  config.py
src/memory/api/: __init__.py
src/memory/data/: __init__.py
src/memory/evals/: __init__.py
src/memory/metrics/: __init__.py
src/memory/model/: __init__.py
src/nanollama/: __init__.py  distributed.py  launcher.py  optim.py  tokenizer.py  utils.py  visualization.py
src/nanollama/agent/: __init__.py  actor.py  sql.py
src/nanollama/agents/: __init__.py  sql.py
src/nanollama/data/: __init__.py  async_loader.py  hdf5.py  lingua_text.py  loader.py  text.py  tokenizer.py  types.py  utils.py
src/nanollama/inference/: __init__.py  batch_masking.py  batch_queue.py
src/nanollama/model/: __init__.py  blocklm.py  embedding_model.py  feedforward.py  mamba.py  norm.py  rnn.py  transfomer.py  transformer.py  utils.py
src/nanollama/monitor/: __init__.py  checkpoint.py  logger.py  monitor.py  orchestrator.py  preemption.py  probe.py  profiler.py  utility.py  wandb.py
src/nanollama/visualization/: __init__.py  loader.py  others.py
tests/: test_data_loader.py  test_data_text.py  test_data_tokenizer.py  test_generation.py
(+103 files in other folders)
